# TrackForge

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt  test_http.py  test_register.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: activity.py  auth.py  health.py  organizations.py  projects.py  reports.py  teams.py  tracking.py  users.py
backend/app/core/: config.py  database.py  deps.py  redis.py  roles.py  security.py
backend/app/middleware/: logging_middleware.py  rate_limit.py  request_id.py
backend/app/models/: __init__.py  attendance.py  base.py  invoice.py  organization.py  project.py  team.py  tracking.py  user.py
backend/app/schemas/: auth.py  organization.py  project.py  reports.py  team.py  tracking.py  user.py
backend/app/services/: auth_service.py
backend/app/tasks/: celery_app.py  notification_tasks.py  report_tasks.py  screenshot_tasks.py
backend/migrations/: env.py
backend/migrations/versions/: 881a741d793d_initial_tables.py  a2f8b3c4d5e6_add_created_by_to_users.py
backend/tests/: test_auth.py  test_health.py
desktop-agent/: package.json
desktop-agent/src/main/: index.ts
desktop-agent/src/tracking/: activity.ts  app-detector.ts  screenshot.ts
docker/nginx/: nginx.conf
docker/scripts/: init-db.sh
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
(+21 files in other folders)
